Update Project Detail Page

--- a/projects/detail1.html
+++ b/projects/detail1.html
@@ -14,7 +14,7 @@
 	<body>
 
 		<!-- Header -->
-			<!-- <header id="header" class="preview">
+			<header id="header" class="preview">
 				<div class="inner">
 					<div class="content">
 						<h1>Radius</h1>
@@ -22,7 +22,7 @@
 					</div>
 					<a href="index.html" class="button hidden"><span>Let's Go</span></a>
 				</div>
-			</header> -->
+			</header>
 
 		<!-- Main -->
 			<div id="preview" >
