--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/png" href="./favicon.png" />
 		<link href="https://fonts.googleapis.com/css?family=Alex+Brush|Pinyon+Script" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -21,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span style="font-size:40px; font-weight: bold; font-family: 'Pinyon Script', cursive;">A.M</span>
+							<span style="font-size:30px; font-weight: bold; font-family: 'Pinyon Script', cursive;">A.M</span>
 						</div>
 						<div class="content">
 							<div class="inner">
