--- a/projects/detail2.html
+++ b/projects/detail2.html
@@ -9,6 +9,7 @@
 		<title>Detail 2 - Radius by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" type="image/png" href=".././favicon.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
@@ -47,10 +48,11 @@
 				<a href="#" class="info fa fa-info-circle"><span>About</span></a>
 				<div class="inner">
 					<div class="content">
-						<h3>Ceva text in footer</h3>
-						<p>In tempor porttitor nisl non elementum. Nulla ipsum ipsum, feugiat vitae vehicula vitae, imperdiet sed risus. Fusce
-							sed dictum neque, id auctor felis. Praesent luctus sagittis viverra. Nulla erat nibh, fermentum quis enim ac,
-							ultrices euismod augue. Proin ligula nibh, pretium at enim eget, tempor feugiat nulla.</p>
+						<h3><a href="https://mateialexandra.github.io">Back to main page</a></h3>
+						<div>
+							<div><i class="icon fa-map-marker"><span style="margin-left: 20px;"> Bucharest, Romania</span></i></div>
+							<div><i class="icon fa-envelope"><span style="margin-left: 10px;"> matei.alexandra22@yahoo.com </span></i></div>
+						</div>
 					</div>
 					<div class="copyright">
 						<h3>Follow me</h3>
@@ -59,7 +61,7 @@
 									 class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/MateiAlexandra" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>.
+						&copy; <script> document.write(new Date().getFullYear()) </script>. Design: <a href="https://templated.co" target="_blank">TEMPLATED</a>.
 					</div>
 				</div>
 			</footer>
